feat(dashboard): enhance UI with glassmorphism design and premium styling
- Update .gitignore with React/Vite, Claude Code, and TypeScript patterns
- Redesign tailwind.config.js with Tech Startup typography (Space Grotesk + DM Sans)
- Add enhanced color palette with neon accents and glass effects
- Implement beautiful loading screen with animated gradient orbs
- Create premium glassmorphism component library in index.css
- Add smooth animations with proper easing curves
- Include accessibility support for reduced motion preferences

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,44 @@ local/
 scratch/
 notes.md
 TODO.md
+
+# Claude Code
+.claude/
+
+# React/Vite Dashboard
+web/dashboard/node_modules/
+web/dashboard/dist/
+web/dashboard/.vite/
+web/dashboard/*.local
+
+# Static files (if generated)
+web/static/dist/
+web/static/build/
+
+# Next.js (if used)
+.next/
+out/
+
+# Storybook
+storybook-static/
+
+# Testing
+web/dashboard/coverage/
+*.lcov
+
+# TypeScript
+*.tsbuildinfo
+
+# ESLint/Prettier
+.eslintcache
+.prettiercache
+
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# PWA
+**/public/sw.js
+**/public/workbox-*.js
