--- a/web/dashboard/package.json
+++ b/web/dashboard/package.json
@@ -15,24 +15,25 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.3.3",
+    "@tanstack/react-query": "^5.17.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.17.0",
+    "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0",
-    "@tanstack/react-query": "^5.17.0",
-    "recharts": "^2.10.3",
-    "lucide-react": "^0.303.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "date-fns": "^3.2.0",
-    "zustand": "^4.4.7",
-    "framer-motion": "^10.17.0",
-    "@headlessui/react": "^1.7.17",
-    "react-hot-toast": "^2.4.1",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.21.0",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.3"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
